tests/bad/error_unwrap_not_result.oc
/// fail:  Can only use !! on Result/Option types, got i32

def foo(): i32 => 0

def main() {
    foo()!!
}